# work-bridge

./: .env  README.md  compose.yaml  compose.yaml.template  dev.compose.yaml  docker-compose.yml  nginx.conf  package-lock.json
server/: .env  Cargo.toml  Dockerfile
server/.sqlx/: query-01136c9033d13024a8f6dcdff16d0cfd51f282cfbe460bf64e4ed79b25dd56b8.json  query-088efac9a44efdbfb67b4ba81f129b9e4800d36a9dfd4f730dbb88e616627c8f.json  query-08e4a3bcfe8a1c469292a8780bec5feca7cecdfe6560d8ef8c34488f1d2e932b.json  query-186971b4a2e825ac60c73b01f43788fe1814da84e999df05093f33ee7a620eb1.json  query-19d101754a39eba20f8b2a0358a19de6729e6893acae283abbd12d37bd075dd4.json  query-1cd7de330ff4dd7ea09c97bb04ccbfdc74e90ab6b8b5ee944b3d3d22d0a0493b.json  query-23a3ee15d313349a233ee014925d84731a3501606e9811a5c622d9c929dfde47.json  query-2b514e04e2aea5366a148b7b19900d974bb2c0123ca1a8584d613af7b8871668.json  query-352042174e39051e90a2d05e87eb8fe45160f12f77fd2473fcb4bca46e31da3e.json  query-3b9ac65b9f845f878c2fbe795dbdcc85bc4dc3d0dcf65b74e953c80e0b156f5f.json  query-430e212d6c0469b16aa5c76022b574b5dd445a3048c5862e087f5e1ea75ae7e3.json  query-4576d8f902924fbb49b66ead214584d0ff7e56106c632ee6b7c8f8e9925d482d.json  query-45c59d1c64c36a88e1f6247a2cd79f72ae36e6c9414ec3f2f3238ff6b8d9983e.json  query-510cda0f7c41b96befc12b33bf19a30f6cd17e304fd45fb68bbf7e3ecc48d492.json  query-5269d0beb217c4e8cbb816bea986710eae15c483cb2cd1938f76a34f933e6802.json  query-57d9a0ae7278fc1d5140dd96457d7012cb3d50acc085c31744639998b65a324b.json  query-5c7e51563eed0c76ed2fe843d5a1f1ec99c56b8cfd257035ae8ee1c166655a08.json  (+15 more)
(+251 files in other folders)
