[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
features = "0.10.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono", "migrate", "bigdecimal"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
futures = "0.3.31"
derive_more = "0.99.18"
bigdecimal = { version = "0.4.7", features = ["serde"] }
dotenv = "0.15.0"
